--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # - name: Run tests
-    #   run: |
-    #     python manage.py migrate
-    #     python manage.py test
+    - name: Run tests
+      run: |
+        python manage.py migrate
+        python manage.py test
 
     - name: Deploy to Ubuntu Server
       uses: appleboy/ssh-action@v0.1.5
