--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,5 +63,5 @@ jobs:
           pip install -r requirements.txt
           python3 manage.py migrate
           python3 manage.py collectstatic --noinput
-          sudo systemctl restart gunicorn
+          # sudo systemctl restart gunicorn
 
